--- a/stylesheets/newblogstyle.css
+++ b/stylesheets/newblogstyle.css
@@ -85,16 +85,16 @@ a:hover {
   border: 2px solid black;
   float: left;
   width: 30%;
-  margin-left: 50px;
+
 }
 
 #blog_posts_wrapper {
   border: 2px solid black;
   display: inline-block;
   height: 600px;
-  width: 55%;
+  width: 67%;
   overflow: scroll;
-  margin-left: 15px;
+  margin-left: 1%;
 }
 
 .blog_header {
