--- a/stylesheets/newblogstyle.css
+++ b/stylesheets/newblogstyle.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #cccccc;
+  background-image: url('https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRCR-96-zIF7HD72_RQEhzOQh30_33D3N_vjwe8YKmTy2fFjpdldg');
 
 }
 
@@ -42,35 +42,97 @@ body {
   height: 50px;
   left: 0;
   right: 0;
-  background-color: #333333;
-  text-align: center;
+  border-top: 3px solid #000000;
+  border-bottom: 3px solid #000000;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 #navbar ul {
-  position: relative;
   list-style: none;
+  text-align: center;
 }
 
 #navbar li {
   display: inline-block;
-  padding: 15px 50px;
-  color: white;
+  padding: 0px 50px;
   font-size: 20px;
+  border-left: 3px solid #000000;
+  border-right: 3px solid #000000;
+  margin: -4px;
 }
 
 a {
-  color: white;
+  color: #333333;
   font-size: 20px;
   text-decoration: none;
 }
 
 a:hover {
-  color: white;
-  text-decoration: underline;
+  font-weight: bold;
+  border-top: 3px solid #000000;
+  border-bottom: 3px solid #000000;
+  font-size: 110%;
+  padding: 5px 10px;
 }
 
+#pic, #about-me, #twitterbox {
+  display: inline-block;
+}
+
+#pic{
+  width: 20%;
+  height: 500px;
+  border-top: 3px solid #000000;
+  border-bottom: 3px solid #000000;
+  float: left;
+}
+#pic img {
+  width: 200px;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  display: block;
+}
+#about-me {
+  margin: 0 2%;
+  width: 55%;
+  height:500px;
+  border-top: 3px solid #000000;
+  border-bottom: 3px solid #000000;
+}
 #twitterbox {
-  margin-left: 50px;
+  width: 20%;
+  height: 500px;
+  margin-right: 10px;
+  float: right;
+  border-top: 3px solid #000000;
+  border-bottom: 3px solid #000000;
+}
+.twitter-timeline {
+  height: 450px;
+}
+#twitterbox h3 {
+  display: inline-block;
+  text-decoration: underline;
+  margin: 8px 3px;
+}
+
+#projects {
+  margin: 10px 0;
+  width: 100%;
+  height:500px;
+  border-top: 3px solid #000000;
+  border-bottom: 3px solid #000000;
+}
+
+#contact {
+  margin: 10px 0;
+  width: 100%;
+  height:200px;
+  border-top: 3px solid #000000;
+  border-bottom: 3px solid #000000;
 }
 
 /* Below this is for the blog styling */
