--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,11 @@ body {
 }
 h1 {
     font-size: 64px;
+    font-family: 'Crafty Girls', cursive;
 }
 h1 span {
     font-size: 12px;
+    font-family: sans-serif;
 }
 
 #wrapper {
@@ -34,6 +36,7 @@ h1 span {
 #wrapper.toggled {
     padding-left: 250px;
 }
+
 /*topbar*/
 #topbar {
   text-align: center;
@@ -46,7 +49,11 @@ h1 span {
   height: 100px;
   line-height: 50px;
 }
-#topbar ul {
+#topbar p {
+    margin-top: -35px;
+    font-family: sans-serif;
+}
+/*#topbar ul {
   list-style: none;
   text-align: right;
   margin-right: 15px;
@@ -55,7 +62,7 @@ h1 span {
   display: inline-block;
   padding: 0px 5px;
   font-size: 20px;
-}
+}*/
 
 /*#topbar>li {
     display: inline-block;
@@ -156,6 +163,7 @@ h1 span {
     display: block;
     clear: left;
     z-index: 10;
+    overflow: hidden;
     overflow:auto;
     margin-left: auto;
     margin-right: auto;
@@ -163,17 +171,109 @@ h1 span {
     -ms-text-justify: distribute-all-lines;
     text-justify: distribute-all-lines;
 }
+/* start of homepage thumbnails */
+.box a
+{
+    display: inline-block;
+    position: relative;
+}
+
+/*a img
+{
+    height: 200px; // demo prop
+    widht: 150px; // demo prop
+
+    border: 0px;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -o-transition: opacity 1.5s linear;
+    -webkit-transition: opacity 1.5s linear;
+    -moz-transition: opacity 1.5s linear;
+}*/
+
+a:hover img
+{
+    /*60 80*/
+    opacity: .40;
+    filter: alpha(opacity=50);
+    -o-transition: opacity .1s linear;
+    -webkit-transition: opacity .1s linear;
+    -moz-transition: opacity 1.5s linear;
+}
+
+a .text
+{
+    opacity: 1;
+    position: absolute;
+    font-size:80px;
+    font-weight:bold;
+    text-align:center;
+    /*color: red;*/
+    display: block;
+    padding: 0;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%); /* IE 9 */
+    -webkit-transform: translate(-50%,-50%); /* Safari and Chrome */
+}
+
+a:hover .text
+{
+    display: block;
+}
+
+
 
 .box {
     width: 450px;
     height: 375px;
-    background:#ccc;
+    /*background:#ccc;*/
     vertical-align: top;
     display: inline-block;
     display: inline;
     margin: 2%;
     zoom: 1
 }
+/* end of homepage thumbnails*/
+
+.row {
+    padding-left: 100px;
+}
+
+.about_row {
+    padding-left: 100px;
+    text-align: center;
+}
+.pic_description{
+     vertical-align: top;
+    display: inline-block;
+    text-align: center;
+    margin: 0 4%;
+}
+.circlepic {
+    height:300px;
+    width: 300px;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center -20px;
+    background-size: cover;
+    border: 7px solid white;
+}
+
+.pic_description span {
+    display: block;
+}
+
+.boxes {
+    height: 400px;
+    width: auto;
+    padding-top: 15px;
+    /*padding-left: 50px;*/
+    float: left;
+}
+
 .stretch {
     width: 100%;
     display: inline-block;
@@ -209,5 +309,8 @@ h1 span {
     #wrapper.toggled #page-content-wrapper {
         position: relative;
         margin-right: 0;
+    }
+    #container {
+        padding-left: 250px;
     }
 }
