--- a/css/blog-stylesheet.css
+++ b/css/blog-stylesheet.css
@@ -151,6 +151,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   height: 100%;
+  position: fixed;
 }
 
 body {
@@ -199,7 +200,7 @@ p {
   margin: 0;
   font-size: 14px;
   text-align: left;
-  margin-left: 45%;
+  margin-left: 48%;
   font-weight: bold;
 }
 
