--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
+* {
+    box-sizing: border-box;
+}
 html {
-    font-family:sans-serif;
-    background: url(http://www.dualimg.com/wp-content/wallpapers/20130111/rqyleuo2uue101.jpg) no-repeat center center fixed;
+  font-family:sans-serif;
+  background: url(http://www.dualimg.com/wp-content/wallpapers/20130111/rqyleuo2uue101.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -8,13 +11,12 @@ html {
 }
 
 body {
-    /*background: url('http://www.dualimg.com/wp-content/wallpapers/20130111/rqyleuo2uue101.jpg') no-repeat center center fixed;
-    background-size: 100% auto;*/
-    background: url(http://www.dualimg.com/wp-content/wallpapers/20130111/rqyleuo2uue101.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
+  margin: 0;
+  padding: 0;
 }
 h1 {
     font-size: 64px;
@@ -25,96 +27,60 @@ h1 span {
     font-family: sans-serif;
 }
 
-#wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-#wrapper.toggled {
-    padding-left: 250px;
-}
-
 /*topbar*/
-#topbar {
-  text-align: center;
-  /*position: fixed;*/
-    /*background:inherit;*/
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  width: 100%;
-  height: 100px;
-  line-height: 50px;
+.header {
+    position: relative; /* needed for stacking */
+    height: 100px;
+    width: 90%;
+    margin: -2% auto 0 auto ;
+    border-radius: 10px;
+    text-align: center;
+    background-color:rgba(0,0,50,0.1);
 }
-#topbar p {
-    margin-top: -35px;
+
+.header-inner p {
+    margin-top: -55px;
     font-family: sans-serif;
 }
-/*#topbar ul {
-  list-style: none;
-  text-align: right;
-  margin-right: 15px;
+
+.content {
+    position: relative; /* needed for stacking */
+    width: 100%;
+    height: 500px;
+    margin-bottom: 20px;
 }
-#topbar li {
-  display: inline-block;
-  padding: 0px 5px;
-  font-size: 20px;
-}*/
-
-/*#topbar>li {
-    display: inline-block;
-    float: left;
-}
-
-#topbar>li>a {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    line-height: 20px;
-    color: #999;
-}*/
-
-
-/*sidebar*/
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    top: 140px;
-    left: 250px;
-    width: 0;
+.sidebar {
+    position: relative; /* needed for stacking */
+    width: 20%;
     height: 100%;
-    margin-left: -225px;
-    float: left;
-    border-radius: 10px;
-    overflow-y: auto;
+    border-top: none;
     background: #0099CC;
+    border-radius: 10px;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
+.sidebar.left { float: left; }
+.content-inner { margin-left: 20%; }
 
-#wrapper.toggled #sidebar-wrapper {
-    width: 250px;
+.row {
+    margin-right: 8%;
+    font-family: 'Oxygen', sans-serif;
+    font-size: 20px;
 }
+.row h2 {text-align: center;}
 
-#page-content-wrapper {
-    width: 100%;
-    position: absolute;
-    padding: 15px;
-}
-
-#wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
+.sidebar.left:after {
+    clear: both;
+    content: "\0020";
+    display: block;
+    overflow: hidden;
 }
 
 /* Sidebar Styles */
 
 .sidebar-nav {
-    position: absolute;
     top: 0;
     width: 250px;
     margin: 0;
@@ -159,40 +125,13 @@ h1 span {
     background: none;
 }
 
-#container {
-    display: block;
-    clear: left;
-    z-index: 10;
-    overflow: hidden;
-    overflow:auto;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    -ms-text-justify: distribute-all-lines;
-    text-justify: distribute-all-lines;
-}
 /* start of homepage thumbnails */
-.box a
-{
+.box a {
     display: inline-block;
     position: relative;
 }
 
-/*a img
-{
-    height: 200px; // demo prop
-    widht: 150px; // demo prop
-
-    border: 0px;
-    opacity: 1;
-    filter: alpha(opacity=100);
-    -o-transition: opacity 1.5s linear;
-    -webkit-transition: opacity 1.5s linear;
-    -moz-transition: opacity 1.5s linear;
-}*/
-
-a:hover img
-{
+a:hover img {
     /*60 80*/
     opacity: .40;
     filter: alpha(opacity=50);
@@ -201,14 +140,12 @@ a:hover img
     -moz-transition: opacity 1.5s linear;
 }
 
-a .text
-{
+a .text {
     opacity: 1;
     position: absolute;
-    font-size:80px;
+    font-size:50px;
     font-weight:bold;
     text-align:center;
-    /*color: red;*/
     display: block;
     padding: 0;
     margin: 0;
@@ -219,16 +156,13 @@ a .text
     -webkit-transform: translate(-50%,-50%); /* Safari and Chrome */
 }
 
-a:hover .text
-{
+a:hover .text {
     display: block;
 }
 
-
-
 .box {
-    width: 450px;
-    height: 375px;
+    width: 300px;
+    height: 250px;
     /*background:#ccc;*/
     vertical-align: top;
     display: inline-block;
@@ -237,10 +171,6 @@ a:hover .text
     zoom: 1
 }
 /* end of homepage thumbnails*/
-
-.row {
-    padding-left: 100px;
-}
 
 .about_row {
     padding-left: 100px;
@@ -280,9 +210,14 @@ a:hover .text
     font-size: 0;
     line-height: 0
 }
-
-
-
+.footer {
+    position: relative;
+    clear: both;
+    width: 100%;
+    height: 100px;
+    background: #0099CC;
+    bottom: 0;
+}
 
 @media(min-width:768px) {
     #wrapper {
