--- a/mines2/application.css
+++ b/mines2/application.css
@@ -7,13 +7,13 @@ table {
 }
 td {
   border: 1px solid black;
-  height: 50px;
-  width: 50px;
+  height: 20px;
+  width: 20px;
   text-align: center;
   border:1px solid #ccc;
-  border-bottom:4px solid #bbb;
-  border-top:1px solid #ddd;
-  border-radius:10px;
+  border-bottom:1px solid #bbb;
+  border:1px solid #ddd;
+  /*border-radius:10px;*/
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
@@ -41,4 +41,20 @@ td {
   font-size: 20px;
   background-color: black;
   color: white;
+}
+
+.container:before, .container:after {
+    /*position: absolute;*/
+    content: '';
+    background: red;
+    display: block;
+    width: 100%;
+    height: 10px;
+   /* -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);*/
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
 }
