--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,11 +1,20 @@
+/*.list {
+  text-align: center;
+  float: right;
+  width: 70%;
+  height: 98%;
+  display: table;
+}
 #container {
   height: 150px;
   width: 40%;
-  /*background: #000000;*/
-  margin: 0 auto;
+  display: table-cell;
+  margin: 0;
+  padding: 20px;
+  vertical-align: middle;
 }
-
-#prev1, #nxt1 {
+*/
+/*#prev1, #nxt1 {
   height: 150px;
   width:140px;
   color:white;
@@ -15,35 +24,40 @@
   line-height: 150px;
   cursor:pointer;
   text-align: center;
-  /*position: absolute;*/
-  /*display: inline-block;*/
-}
+}*/
+/*.list {
+  position: absolute;
+  left: 350px;
+  display: inline-block;
+}*/
 
 #prev1 { float: left;}
 #nxt1 {
   float: right;
-  /*left: 63%;*/
 }
-
-/*#container:hover > #nxt, #container:hover > #prev {
-  visibility: visible;
-  transition-delay:.3s;
-}*/
 
 #images {
   list-style: none;
 }
 
 .img {
-  height: 300px;
+  height: 400px;
   width: auto;
   position: absolute;
-  margin: 0 auto;
-  left: 0;
-  right: 0;
+  /*margin: 0 auto;*/
+  left: 35%;
+  top: 10%;
+  /*right: 0;*/
+}
+#wrapper {
+  text-align: center;
+  display: inline-block;
+  position: absolute;
+  top: 80%;
+  left: 57%;
 }
 .bottom {
-  width: 200px;
+  width: 42%;
   position:absolute;
   bottom:0;
   margin: 0 auto;
@@ -58,19 +72,16 @@
   transition-delay:.1s;
 }
 
-.hidden {
+/*.hidden {
   display: none;
-}
-#wrapper {
-  text-align: center;
-}
+}*/
+
 #dots {
   list-style:none;
   /*position: absolute;*/
   display: inline-block;
   margin: 0;
   padding: 0;
-
   padding-top: 10px;
 }
 #wrapper span{
@@ -113,4 +124,17 @@
 #dots li.active {
   background:#2284A1;
   opacity: 1;
+}
+@media only screen and (max-width: 1050px) {
+    /*body { background-color: blue;}*/
+    .img {
+        position: absolute;
+        /*display: none;*/
+        left: 5%;
+        top: 15%;
+    }
+    #wrapper {
+        left: 37%;
+        top: 89%;
+    }
 }
